--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
   "devDependencies": {
     "@types/chrome": "~0.0.72",
     "@types/jquery": "~3.3.1",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-chrome-manifest": "0.0.13",
+    "gulp-if": "^2.0.2",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-run-command": "0.0.9",
+    "gulp-zip": "^4.2.0",
     "ts-loader": "~5.0.0",
     "typescript": "~3.0.3",
     "webpack": "~4.17.2",
